# PrismatAlpha

./: .clang-format  .gitignore  .mcp.json  CLAUDE.md  CLAUDE_engine_validation_plan.md  CLAUDE_selfplay_cpp_progress.md  CLAUDE_selfplay_cpp_task.md  CMakeLists.txt  README.md  cloud-config.env.example  cross_validation_report.json  cross_validation_report_v2.json  extract_swf_sprites.py  run_advisor.bat  run_dashboard.bat  run_prismata_tools.bat  run_replay_capture.bat
aws/: aggregate_matchup_results.sh  deploy_for_eval.sh  deploy_for_matchup.sh  deploy_js_selfplay.sh  download_results.sh  launch_audit.sh  launch_deepsets_training.sh  launch_heuristic_eval.sh  launch_human_training.sh  launch_js_selfplay.sh  launch_masterbot_fleet.sh  launch_masterbot_selfplay.sh  launch_matchup.sh  launch_selfplay.sh  launch_tournament.sh  launch_training.sh  relaunch_when_done.bat  relaunch_when_done.sh  sync_results.bat  test_cuda.sh  test_training.sh  test_training2.sh  test_watcher_canary.ps1  test_watcher_e2e.ps1  test_watcher_log_health.ps1  test_watcher_smoke.ps1  watcher.ps1  watcher_config.json  watcher_silent.vbs
azure/: launch_selfplay.sh
bot/: __main__.py  ai_params.py  amf3.py  client.py  config.py  game_player.py  ranked_bot.py  state_bridge.py  steam_ai_bridge.py  trigger_poller.py
dashboard/: actions.json  get_local_procs.ps1  get_local_stats.ps1  package-lock.json  package.json  server.js
deadgame/: deadgame.nginx.conf  deadgame.service  deploy.sh  package.json  server.js
docs/: Clicks.txt  DOCUMENTATION_INDEX.md  Ideas.txt  JSEngine_fail_codes.txt  (+36 more)
(+2141 files in other folders)
